# strongvpn

./: CMakeLists.txt  DEPLOYMENT_GUIDE.md  MATHEMATICAL_FOUNDATIONS.md  deploy_strongvpn.sh
docs/: EVE-NG_SETUP.md
examples/: pq_math_demo.c
src/apps/: strongvpn_client.c  strongvpn_server.c
src/common/: logger.c  logger.h
src/crypto/: ml_dsa.c  ml_dsa.h  ml_kem.c  ml_kem.h  pq_core.c  pq_core.h  pq_liboqs.c  pq_liboqs.h
src/network/: tunnel.c  tunnel.h
src/vpn/: pq_auth.c  pq_auth.h  pq_handshake.c  pq_handshake.h
